--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,8 +28,21 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+  # Shared preferences to store token
+  shared_preferences: ^0.5.7+3
+  # json_annotation for json_serializers to work
+  json_annotation: ^3.0.1
+  # http client
+  dio: 3.0.9
+  # rxdart for behavior Subject in BLoC
+  rxdart: 0.24.1
+  # provider for dependency injection
+  provider: 4.1.3
+
 
 dev_dependencies:
+  build_runner: ^1.10.0
+  json_serializable: ^3.3.0
   flutter_test:
     sdk: flutter
 
