--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,11 +40,14 @@ dependencies:
   provider: 4.1.3
 
 
+
 dev_dependencies:
   build_runner: ^1.10.0
   json_serializable: ^3.3.0
   flutter_test:
     sdk: flutter
+  # for tests
+  mockito: 4.1.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
