--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,10 +32,10 @@ dependencies:
   shared_preferences: ^0.5.7+3
   # json_annotation for json_serializers to work
   json_annotation: ^3.0.1
-  # http client
-  dio: 3.0.9
   # rxdart for behavior Subject in BLoC
   rxdart: 0.24.1
+  # http
+  http: 0.12.1
   # provider for dependency injection
   provider: 4.1.3
 
@@ -61,8 +61,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - env/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
