--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   http: 0.12.1
   # provider for dependency injection
   provider: 4.1.3
+  # image poicker for images
+  image_picker: ^0.6.7+2
 
 
 
