--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dev_dependencies:
     sdk: flutter
   # for tests
   mockito: 4.1.1
+  matcher: 0.12.6
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
